docker/kubernetes/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.netkiller.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot
            port: 
              number: 80
